# -

./: .gitignore  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: paddle_ocr_native.cpp
android/app/src/main/kotlin/com/yingfeng/expense_manager/: MainActivity.kt  PaddleOcrPlugin.kt  ScreenshotPlugin.kt
assets/: tessdata_config.json
docs/superpowers/plans/: 2026-05-13-expense-manager-plan.md
docs/superpowers/specs/: 2026-05-13-expense-manager-design.md
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/database/: database_helper.dart
lib/models/: attachment.dart  category.dart  record.dart  reimbursement.dart
lib/pages/: add_record_page.dart  home_page.dart  records_page.dart  reimbursement_list_page.dart  report_page.dart  settings_page.dart
lib/repositories/: attachment_repository.dart  category_repository.dart  record_repository.dart  reimbursement_repository.dart
lib/services/: export_service.dart  import_service.dart  ocr_service.dart  screenshot_service.dart
lib/widgets/: category_selector.dart  payment_selector.dart  record_card.dart  statistic_card.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: download_paddle_ocr.sh  install_android_sdk.sh  install_flutter.sh  install_jdk.sh
test/: ocr_service_test.dart  widget_test.dart
windows/runner/: Runner.rc
(+8 files in other folders)
